# ROS2_Testings_pro3

./: .gitattributes  .gitignore  Nodes_ROS2.txt
ros2_ws/: README.md
ros2_ws/src/ugv_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/ugv_bringup/config/: params.yaml
ros2_ws/src/ugv_bringup/launch/: bringup_race.launch.py
ros2_ws/src/ugv_control/: package.xml  setup.py
ros2_ws/src/ugv_control/resource/: ugv_control
ros2_ws/src/ugv_control/ugv_control/: speed_limiter_node.py  vehicle_interface_node.py
ros2_ws/src/ugv_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/ugv_msgs/msg/: Behavior.msg  ParkingSlot.msg  ParkingSlots.msg
ros2_ws/src/ugv_planning/: package.xml  setup.cfg  setup.py
ros2_ws/src/ugv_planning/resource/: ugv_planning
ros2_ws/src/ugv_planning/ugv_planning/: local_planner_node.py
ros2_ws/src/ugv_safety/: package.xml  setup.cfg  setup.py
ros2_ws/src/ugv_safety/resource/: ugv_safety
ros2_ws/src/ugv_safety/ugv_safety/: collision_monitor_node.py  emergency_brake_node.py
ros2_ws/src/ugv_strategy/: package.xml  setup.cfg  setup.py
ros2_ws/src/ugv_strategy/resource/: ugv_strategy
ros2_ws/src/ugv_strategy/ugv_strategy/: mission_manager_node.py  parking_strategy_node.py
ros2_ws/src/ugv_v2x/: package.xml  setup.cfg  setup.py
ros2_ws/src/ugv_v2x/resource/: ugv_v2x
ros2_ws/src/ugv_v2x/ugv_v2x/: ampel_state_fuser_node.py  leitsystem_interface_node.py
