<package format="3">
  <name>ugv_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for the UGV autonomous vehicle competition</description>
  <maintainer email="lukas@example.com">lukas</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
